feat(main): add nav, hero, and about sections

--- a/views/main.html
+++ b/views/main.html
@@ -7,16 +7,41 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the Sport Areal</h1>
+        <img src="/static/images/logo.png" alt="Logo" />
+        <nav id="header_nav">
+            <ul>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#prices">Prices</a></li>
+                <li><a href="#reservation">Reservation</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="">Login</a></li>
+            <li><a href="">Sign Up</a></li>
+        </ul>
     </header>
     <main>
         <section>
-            <h2>Hero </h2>
-            <p>Stay tuned for the latest updates and news about our website and services.</p>
+            <h1>Train to the max. Live to the max.</h1>
+            <p>Sport areal for everyone.</p>
         </section>
         <section>
-            <h2>About Us</h2>
-            <p>This is the main page of our website. Here you can find various resources and information about our services.</p>
+            <div>
+                <h2>About Us</h2>
+                <p>Welcome to our sports areal — where movement meets passion and determination!
+                    We’re a modern training hub offering a wide range of activities for all ages and skill levels.
+                    Whether you’re a beginner looking for a new challenge or an experienced athlete aiming to sharpen your game, you’ll find your place here.</p>
+                <p>Our goal is to provide professional facilities and a motivating environment where you can grow your skills,
+                    enjoy every session, and push your limits.</p>
+            </div>
+            <div>
+            <h3>Why Choose Us?</h3>
+                <p><b>Modern facilities:</b> From a fully equipped gym and multi-purpose courts to dedicated spaces for specialized sports.</p>
+                <p><b>Community vibe:</b> We believe in team spirit and healthy competition. With us, you’ll feel right at home.</p>
+                <p><b>Diverse activities:</b> Tennis, swimming, running, or gym — there’s something for everyone.</p>
+            </div>
         </section>
         <section>
             <h2>Gallery</h2>
